# MineSync

./: .env.example  .gitignore  AGENTS.md  README.md  REVIEW.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: .gitkeep
docs/: index.md  research.md
docs/architecture/: DOC.md  INDEX.md
docs/authentication/: DOC.md  INDEX.md
docs/database/: DOC.md  INDEX.md
docs/download-manager/: DOC.md  INDEX.md
src/: App.tsx  index.css  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs
src-tauri/src/commands/: account.rs  auth.rs  install.rs  instance.rs  java.rs  launch.rs  loader.rs  minecraft.rs  mod.rs  mods.rs  p2p.rs  sync.rs  sync_protocol.rs
src-tauri/src/models/: account.rs  auth.rs  install.rs  instance.rs  java.rs  launch.rs  loader.rs  mod.rs  mod_info.rs  mod_platform.rs  sync.rs
src-tauri/src/services/: auth.rs  database.rs  download.rs  install.rs  java.rs  launch.rs  minecraft.rs  mod.rs  p2p.rs
src-tauri/src/services/loader/: fabric.rs  forge.rs  mod.rs  neoforge.rs  quilt.rs
src-tauri/src/services/mod_platform/: curseforge.rs  mod.rs  modrinth.rs
src-tauri/src/services/p2p/: behaviour.rs  mod.rs  share_code.rs  swarm_loop.rs  types.rs
src-tauri/src/services/sync_protocol/: apply_diff.rs  manifest_diff.rs  mod.rs
wiki/: API-Reference.md  Architecture.md  Building.md  Configuration.md  Contributing.md  Database-Schema.md  Getting-Started.md  Home.md  Mod-Loaders.md  P2P-Protocol.md  Sync-Protocol.md
(+45 files in other folders)
