[package]
name = "minesync"
version = "0.1.0"
description = "MineSync - Minecraft Mod Synchronization"
authors = ["MineSync Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
exclude = [
    "../docs/",
    "../wiki/",
    "../REVIEW.md",
    "../AGENTS.md",
    "../CLAUDE.md",
    "../README.md",
    "../*.md",
]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "identify",
    "ping",
    "relay",
    "dcutr",
    "autonat",
    "request-response",
    "cbor",
    "macros",
    "dns",
    "quic",
] }
rand = "0.8"
sha1 = "0.10"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
zip = "2"
dotenvy = "0.15.7"
tauri-plugin-opener = "2"
